# freshgrlc-pool

./: CMakeLists.txt  INSTALL  freshgrlc-pool.kdev4  test.cpp
lib/bitcoinp2p/: CMakeLists.txt  P2PConnection.cpp  P2PConnection.h  P2PMessage.cpp  P2PMessage.h  P2PSocket.cpp  P2PSocket.h
lib/bitcoinp2p/messages/: GetAddr.h  Ping.h  PingPong.cpp  Pong.h  VerAck.h  Version.cpp  Version.h
lib/bitcoinrpc/: BlockChainInfo.h  BlockTemplate.h  CMakeLists.txt  RPCConnection.cpp  RPCConnection.h  RPCSocket.h
lib/interfaces/plugins/: HashPlugin.h
lib/messagebus/: AbstractMessage.cpp  AbstractMessage.h  CMakeLists.txt  MessageBusClient.cpp  MessageBusClient.h  MessageFactory.cpp  MessageFactory.h  MessageStreamParser.cpp  MessageStreamParser.h  OpaqueMessage.cpp  OpaqueMessage.h  SetSubscriptionsMessage.cpp  SetSubscriptionsMessage.h
lib/mining/: AbstractCoinbaseOutput.cpp  AbstractCoinbaseOutput.h  BlockHash.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  CoinbaseCommitment.cpp  CoinbaseCommitment.h  CoinbaseOutput.cpp  CoinbaseOutput.h  CoinbaseOutputs.cpp  CoinbaseOutputs.h  CoinbaseTransaction.cpp  CoinbaseTransaction.h  CoinbaseWitnessCommitment.cpp  CoinbaseWitnessCommitment.h  Hash.cpp  Hash.h  Hash160.h  Hash256.cpp  Hash256.h  MerkleBranch.cpp  MerkleBranch.h  MerkleRoot.cpp  MerkleRoot.h  RawTransaction.h  RawTransactions.cpp  RawTransactions.h  VarData.h  VarInt.cpp  VarInt.h  block.h  hashplugin.cpp  hashplugin.h  swap32.h
lib/mining/txscript/: Op.h  PushData.cpp  PushData.h  Script.h
lib/socket/: AsynchronousSocket.cpp  AsynchronousSocket.h  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  ErrnoError.h  IncomingConnection.cpp  IncomingConnection.h  Listener.cpp  Listener.h  ListeningConnectionManager.cpp  ListeningConnectionManager.h  Packet.h  ReconnectingClient.cpp  ReconnectingClient.h  Socket.cpp  Socket.h  SocketBase.cpp  SocketBase.h
lib/stratum/: BlockGenerationInformation.cpp  BlockGenerationInformation.h  BlockSubmitter.h  CMakeLists.txt  JobManager.cpp  JobManager.h  NetworkState.cpp  NetworkState.h  Pool.cpp  Pool.h  StratumCall.cpp  StratumCall.h  StratumClientConnection.cpp  StratumClientConnection.h  StratumConnectionManager.cpp  StratumConnectionManager.h  StratumJob.cpp  StratumJob.h  StratumServer.cpp  StratumServer.h
lib/stratum/calls/: MiningAuthorize.cpp  MiningAuthorize.h  MiningExtraNonceSubscribe.cpp  MiningExtraNonceSubscribe.h  MiningSubmit.cpp  MiningSubmit.h  MiningSubscribe.cpp  MiningSubscribe.h
lib/util/: ByteString.cpp  ByteString.h  ByteStringReader.cpp  ByteStringReader.h  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  ConstByteStringRef.cpp  ConstByteStringRef.h  Lock.cpp  Lock.h  Queue.h  SystemRandom.cpp  SystemRandom.h  Thread.cpp  Thread.h  WorkerThread.h  logger.cpp  logger.h  util.h
mbus-relayd/: BusConnection.cpp  BusConnection.h  CMakeLists.txt  MessageBusServer.cpp  MessageBusServer.h  main.cpp
plugins/: CMakeLists.txt
plugins/mining/: CMakeLists.txt
plugins/mining/hash_allium/: AlliumHashPlugin.cpp  AlliumHashPlugin.h  CMakeLists.txt  allium_hash.h
plugins/mining/hash_sha256d/: CMakeLists.txt  SHA256dHashPlugin.cpp  SHA256dHashPlugin.h  test_csha256_exists.h
pool/: BlockTemplatePoller.cpp  BlockTemplatePoller.h  CMakeLists.txt  DaemonConnector.cpp  DaemonConnector.h  Pool.cpp  Pool.h  StratumConfiguration.h  main.cpp
utils/crawler/: CMakeLists.txt  ConnectionHolder.cpp  ConnectionHolder.h  ConnectionManager.cpp  ConnectionManager.h  NodeConnection.cpp  NodeConnection.h  main.cpp
utils/mbus-test/: CMakeLists.txt  DummyClient.cpp  DummyClient.h  TestMessage.cpp  TestMessage.h  main.cpp
